@@ -40,6 +40,7 @@
  * IF IBM IS APPRISED OF THE POSSIBILITY OF SUCH DAMAGES.
  */
 
+#include "bson.h"
 #include "common-b64-private.h"
 
 #define Assert(Cond) \
@@ -258,11 +259,26 @@ static const uint8_t mongoc_b64rmap_end = 0xfd;
 static const uint8_t mongoc_b64rmap_space = 0xfe;
 static const uint8_t mongoc_b64rmap_invalid = 0xff;
 
-/**
- * Initializing the reverse map is not thread safe, do it at startup.
- **/
-void
-bson_b64_initialize_rmap (void)
+/* initializing the reverse map isn't thread safe, do it in pthread_once. here
+ * in a common source file we don't have access to bson or mongoc defines like
+ * BSON_ONCE_FUN. */
+#if defined(BSON_OS_UNIX)
+#include <pthread.h>
+#define mongoc_common_once_t pthread_once_t
+#define mongoc_common_once pthread_once
+#define MONGOC_COMMON_ONCE_FUN(n) void n (void)
+#define MONGOC_COMMON_ONCE_RETURN return
+#define MONGOC_COMMON_ONCE_INIT PTHREAD_ONCE_INIT
+#else
+#define mongoc_common_once_t INIT_ONCE
+#define MONGOC_COMMON_ONCE_INIT INIT_ONCE_STATIC_INIT
+#define mongoc_common_once(o, c) InitOnceExecuteOnce (o, c, NULL, NULL)
+#define MONGOC_COMMON_ONCE_FUN(n) \
+   BOOL CALLBACK n (PINIT_ONCE _ignored_a, PVOID _ignored_b, PVOID *_ignored_c)
+#define MONGOC_COMMON_ONCE_RETURN return true
+#endif
+
+static MONGOC_COMMON_ONCE_FUN (bson_b64_initialize_rmap)
 {
    int i;
    unsigned char ch;
@@ -286,6 +302,8 @@ bson_b64_initialize_rmap (void)
    /* Fill reverse mapping for base64 chars */
    for (i = 0; Base64[i] != '\0'; ++i)
       mongoc_b64rmap[(uint8_t) Base64[i]] = i;
+
+   MONGOC_COMMON_ONCE_RETURN;
 }
 
 static int
@@ -501,6 +519,10 @@ mongoc_b64_pton_len (char const *src)
 int
 bson_b64_pton (char const *src, uint8_t *target, size_t targsize)
 {
+   static mongoc_common_once_t once = MONGOC_COMMON_ONCE_INIT;
+
+   mongoc_common_once (&once, bson_b64_initialize_rmap);
+
    if (target)
       return mongoc_b64_pton_do (src, target, targsize);
    else
